fixing whitespace

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,3 +2,16 @@
     min-height: 400px;
     border-bottom:2px solid grey;
 }
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #efefef;
+    text-align: center;
+}
+
+body {
+    background-color: #3F664E;
+}
